feat: interface midsection

--- a/src/assets/styles/Navbar.css
+++ b/src/assets/styles/Navbar.css
@@ -4,9 +4,11 @@
     position:relative; 
     display: flex;
     float: left;
-    margin-top: -1rem;
+    margin-top: 0.5em;
     height: 6em;
     width: 6em;
+    margin-left: 1rem;
+    
 }
 .signlog { 
     display: flex;
@@ -14,6 +16,8 @@
     font-family: 'Roboto', sans-serif;
     font-size: 1em;
     color:black;
+    margin-top: 0.05rem;
+    margin-right: 1em;
     
 }
 .signlog a{
@@ -29,15 +33,15 @@
     height:40em;
     width:40em;
     margin-right:-6em;
-    margin-top:-4.5em;
+    margin-top: -4.5em;
     
 }
 .belowl{
     position:relative;
     display: flex;
     float:left;
-    padding-top: 0.5em;
-    padding-left:1.5em;
+    padding-top: 8em;
+    padding-left:3em;
     font-family: 'Roboto', sans-serif;
     font-size:20px;
     font-weight:bold;
@@ -46,8 +50,8 @@
     position:relative;
     display: flex;
     float:left;
-    padding-top: -2em;
-    padding-left: 2em; 
+    padding-top: 15em;
+    margin-left:-23.5em;
    
     
 }
@@ -60,7 +64,7 @@
     width:9.5em;
     height:3em;
     border-radius:8px;
-    padding-top: 17px;
+    padding-top: 9px;
     text-align: center; 
     text-decoration: none;    
 }
