--- a/src/assets/styles/Communities.css
+++ b/src/assets/styles/Communities.css
@@ -1,16 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-.mid{
-  padding-top: 3em;
-}
-.sect{
+/* .mid-body{
+  /* padding-top: 3em; 
+} */
+.sect-body{
   background-color: #f4f4f4 ;
 }
-.sect h1{
+.sect-body h1{
  color:#008294;
  padding-left: 1em;
  padding-top:0.5em;
 }
-.sect .other-pages {
+.sect-body .other-pages {
   text-decoration: none;
   display:flex;
   float:left;
@@ -33,7 +33,7 @@
 
 
 *{margin:0px;padding:0px;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box;font-family: 'Roboto';}
-.grid-container {
+.grid-container-body {
   display: grid;
   grid-template-columns: auto auto auto;
   padding: 10px;
@@ -45,7 +45,7 @@
 .Card3{
   position: relative;
   display:inline-block;
-  width: 29em;
+  width: 28em;
   height: 400px;
   margin: 2em 1em;
   overflow: hidden;
@@ -76,6 +76,7 @@
 .Card3:hover .overlay{bottom:0px;}
 
 .Card3 .overlay .line{width: 100%;text-align: left;line-height: 50px;padding:0em 1em;}
+.Card3 .overlay .line .title-comm{padding-top:3em; margin-top:-3em;}
 .Card3 .overlay .line .content{text-align: left;padding: 1em; }
 
 .read{
@@ -97,7 +98,17 @@
   margin-left: 5px;opacity: 1;
 }
 
-@media screen and (max-width: 700px){
+@media screen and (max-width: 600px){
+  .grid-container-body{
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 10px;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    margin-top:3em;  
+    margin-right:0.5em;
+    margin-left:0.5em;
+  }
   .Card3{width: 100%;height: auto;margin: 1em 0em;}
   .Card3:hover img{top:30%;opacity: 0.5;}
 
@@ -117,4 +128,6 @@
   }
   .Card3:hover .overlay{bottom:0px;}
   .Card3:hover img{top:50%;opacity: 1;}
+  .Card3 .overlay .line .title-comm .content{margin-bottom:-10em;}
+
 }
