--- a/src/assets/styles/Midsectevent.css
+++ b/src/assets/styles/Midsectevent.css
@@ -1,14 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-.title{
+.title-event{
     padding-top:3em;
+  
     
 }
-.title h1{
+.title-event h1{
     color:#008294;
     padding-left: 1em;
       
 }
-.title .other-pages{
+.title-event .other-pages-event{
   text-decoration: none;
   display:flex;
   float:right;
@@ -20,22 +21,22 @@
   margin-top:-0.5em;
   
 }
-.other-pages:after {
+.other-pages-event:after {
     content: ">";
     margin-left: 10px;
     opacity: 0;
     -moz-transition: 0.5s;-o-transition: 0.5s;-webkit-transition: 0.5s;transition: 0.5s;
   }
-.other-pages:hover:after {
+.other-pages-event:hover:after {
     margin-left: 5px;opacity: 1;
   }
-.grid-container {
+.grid-container2 {
     display: grid;
     grid-template-columns: auto auto auto auto;
     padding: 10px;
     grid-column-start: 1;
-    grid-column-end: 5;
-    margin-top:3em;
+    grid-column-end: 4;
+    margin-top:3em;  
     
   }
 .Card2{
@@ -86,7 +87,7 @@
     -moz-transition: 0.5s;-o-transition: 0.5s;-webkit-transition: 0.5s;transition: 0.5s;
   }
   
-  .Card2 .overlay a{
+  .Card2 .overlay .link{
     position: relative;
     width: 60%;
     top: 200px;
@@ -97,16 +98,26 @@
     border-radius: 3px;
     -moz-transition: 0.5s;-o-transition: 0.5s;-webkit-transition: 0.5s;transition: 0.5s;
   }
-  .Card2 a:hover{background: #fff;color:#5c5c5c;}
+  .Card2 .link:hover{background: #fff;color:#5c5c5c;}
   
   .Card2:hover .overlay{background: rgba(92, 92, 92, 0.8);}
   .Card2:hover h2{top: 0px;}
-  .Card2:hover a{top: 0px;}
+  .Card2:hover .link{top: 0px;}
 
-  @media screen and (max-width: 700px){
+  @media screen and (max-width: 600px){
 
   /* --- Card2 ---- */
-
+  .grid-container2 {
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 10px;
+    grid-column-start: 1;
+    grid-column-end: 4;
+    margin-top:3em;  
+    margin-right:2em;
+    margin-left:1em;
+    
+  }
   .Card2{
     position: relative;
     display:block;
@@ -116,6 +127,14 @@
     border-radius: 0px;
     box-shadow: 0px 25px 50px rgba(0, 0, 0, 0.5);
     overflow: hidden;
-    transition: all .4s ease;
   }
+  /* .Card2 .overlay .link{
+   position: absolute;
+   color:blue;
+   margin-top:4em;
+   
+  } */
+  
+  
+
 }
