--- a/src/assets/styles/Midsectevent.css
+++ b/src/assets/styles/Midsectevent.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 .title-event{
     padding-top:3em;
-  
     
 }
 .title-event h1{
@@ -18,7 +17,7 @@
   font-family: 'Roboto', sans-serif;
   font-weight: bold;
   font-size: 1.5em;
-  margin-top:-0.5em;
+  margin-top:0.9em;
   
 }
 .other-pages-event:after {
@@ -32,17 +31,15 @@
   }
 .grid-container2 {
     display: grid;
-    grid-template-columns: auto auto auto auto;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     padding: 10px;
-    grid-column-start: 1;
-    grid-column-end: 4;
-    margin-top:3em;  
+    margin-top:1em;  
     
   }
 .Card2{
     position: relative;
     display: inline-block;
-    width: 300px;
+    /* width: 300px; */
     height: 300px;
     margin: 2em;
     background-size: cover;
@@ -91,7 +88,7 @@
     position: relative;
     width: 60%;
     top: 200px;
-    padding: 0.5em 2em;
+    padding: 0.5em 1.8em;
     border: 2px solid #fff;
     text-decoration: none;
     color:#FFFFFF;
