--- a/src/assets/styles/Midsect.css
+++ b/src/assets/styles/Midsect.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-.mid{
-  padding-top: 30em;
-}
+/* .mid{
+  padding-top: 15em;
+} */
 .sect{
   background-color: #f4f4f4 ;
 }
@@ -10,16 +10,23 @@
  padding-left: 1em;
  padding-top:0.5em;
 }
+
+.header-linked{
+  display:flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+  /* justify-content: center; */
+  flex-wrap: wrap;
+}
+
 .sect .other-pages {
   text-decoration: none;
-  display:flex;
-  float:left;
-  padding-left:56em;
   color: #008294;
   font-family: 'Roboto', sans-serif;
   font-weight: bold;
   font-size: 1.5em;
-  margin-top:-0.5em;
+  margin-top:2em;
 }
 .other-pages:after {
   content: ">";
@@ -35,17 +42,14 @@
 *{margin:0px;padding:0px;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box;font-family: 'Roboto';}
 .grid-container {
   display: grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: repeat(auto-fill, minmax(26em, 1fr));
   padding: 10px;
-  grid-column-start: 1;
-  grid-column-end: 3;
   grid-gap: 30px 30px;
 }
 /* --- Card3 ---- */
 .Card3-mid{
   position: relative;
   display:inline-block;
-  width: 26em;
   height: 400px;
   margin: 2em 1em;
   overflow: hidden;
@@ -101,24 +105,28 @@
 @media screen and (max-width: 600px){
   .grid-container{
     display: grid;
-    grid-template-columns: 1fr;
+    /* grid-template-columns: 1fr; */
+    grid-template-columns: repeat(auto-fill, minmax(186px, 1fr));
     padding: 10px;
-    grid-column-start: 1;
-    grid-column-end: 3;
-    margin-top:3em;  
+    /* grid-column-start: 1;
+    grid-column-end: 3; */
+    /* margin-top:3em;  
     margin-right:0.5em;
-    margin-left:0.5em;
+    margin-left:0.5em; */
   }
 .sect{width: 100%; height: 100%;}
+
+.sect h1{
+  font-size:1em ;
+}
+
 .sect .other-pages{
   text-decoration: none;
-  display:flex;
-  float:right;
   padding-top: 1em;
   color: #008294;
   font-family: 'Roboto', sans-serif;
   font-weight: bold;
-  font-size: 1.5em;
+  font-size: 0.8em;
   }
 .Card3-mid{
     width: 100%;
