--- a/src/assets/styles/Navbar.css
+++ b/src/assets/styles/Navbar.css
@@ -1,41 +1,61 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap');
 
-.logoimg{
-    position:relative; 
+.navbar-nav{
     display: flex;
-    float: left;
-    margin-top: 0.5em;
-    height: 6em;
-    width: 6em;
-    margin-left: 1rem;
-    
+    justify-content: space-between;
+    width: 100%;
+    min-height: 40px;
+    align-items: center;   
 }
-.signlog { 
-    display: flex;
-    float: right;
+.navbar-nav .logo-nav{
+    width: 6em;
+}
+.navbar-nav .signlog{
     font-family: 'Roboto', sans-serif;
     font-size: 1em;
     color:black;
-    margin-top: 0.05rem;
-    margin-right: 1em;    
 }
-.signlog .alink{
+.navbar-nav .signlog li{
+    list-style-type: none;
+    display: inline-block;
+    padding: 5px;  
+}
+.navbar-nav .signlog .alink{
+    margin-top: -0.05rem;
     color:black;
-    text-decoration: none;
-    
+    text-decoration: none;    
 }
 
-.ill-img{
+.header{
+    width: 100%;
+    min-height: 50vh;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.header .col{
+    flex-basis: 100%;
+    flex: 1;
+}
+.header .col.left-col{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.col .ill-img{
     position:relative;
     display: flex;
     float: right;
-    height:40em;
-    width:40em;
-    margin-right:-6em;
-    margin-top: -4.5em;
-    
-}
+    height: auto;
+    width:100%; 
+}  
+
+
+
+/*
 .belowl{
     position:relative;
     display: flex;
@@ -45,17 +65,17 @@
     font-family: 'Roboto', sans-serif;
     font-size:20px;
     font-weight:bold;
-}
+} 
+*/
 
-.btn{
+/* .btn{
     position:relative;
     display: flex;
     float:left;
     padding-top: 15em;
-    margin-left:-23.5em;
-   
+    margin-left:-23.5em; 
     
-}
+} */
 .btn-btn{
     font-family: 'Roboto', sans-serif;
     font-size: 1em;
@@ -68,9 +88,10 @@
     padding-top: 9px;
     text-align: center; 
     text-decoration: none;  
+    padding-bottom:0.9em;
     
 }
-.btn a:hover{
+.btn-btn:hover{
         display: block;
         text-align: center;
         border: 2px solid#ff1154;
@@ -79,22 +100,17 @@
         box-shadow: 0 5px 15px crimson;
         transition: 0.5s;
 }
-@media (max-width: 600px){
-.signlog{
-margin-top:1em;
-    }
-.ill-img{
-    width:65%;
-    margin-right:1em;
-    margin-top:-13em;
-    }
-.belowl{
-    margin-top:-19em;
-    margin-left:-1em;
-}
-.btn{
-    margin-top:-21em;
-    margin-left:2.5em;
-} 
 
+@media (max-width: 600px) {
+.header{
+    width: 100%;
+}
+.header .col{
+    flex: 1 auto !important;
+}
+.ill-img{
+    height:auto;
+    width:100%; 
+
+}
 }
