--- a/src/assets/styles/Midsectevent.css
+++ b/src/assets/styles/Midsectevent.css
@@ -31,7 +31,7 @@
   }
 .grid-container2 {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
     padding: 10px;
     margin-top:1em;  
     
@@ -120,7 +120,7 @@
     display:block;
     width: 100%;
     height: 300px;
-    margin: 3em 0em;
+    margin: 2em 0em;
     border-radius: 0px;
     box-shadow: 0px 25px 50px rgba(0, 0, 0, 0.5);
     overflow: hidden;
@@ -131,8 +131,20 @@
    margin-top:4em;
    
   }
-  
-  
+  .title-event h1{
+    font-size:1em ;
+  }
+  .title-event .other-pages-event{
+    text-decoration: none;
+    padding-top: 1em;
+    color: #008294;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    font-size: 0.8em;
+    }
+    .grid-container2 {
+      margin-top:-1em;
+    }
   
 
 }
