--- a/src/assets/styles/Communities.css
+++ b/src/assets/styles/Communities.css
@@ -2,8 +2,11 @@
 /* .mid-body{
   /* padding-top: 3em; 
 } */
+
 .sect-body{
   background-color: #f4f4f4 ;
+  
+  
 }
 .sect-body h1{
  color:#008294;
@@ -34,24 +37,32 @@
 
 *{margin:0px;padding:0px;-webkit-box-sizing: border-box;-moz-box-sizing: border-box;box-sizing: border-box;font-family: 'Roboto';}
 .grid-container-body {
-  display: grid;
+  /* display: grid;
   grid-template-columns: auto auto auto;
   padding: 10px;
   grid-column-start: 1;
   grid-column-end: 3;
+  grid-gap: 30px 30px;
+  width: 100%;
+  min-height: 40px; */
+
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(26em, 1fr));
+  padding: 10px;
   grid-gap: 30px 30px;
 }
 /* --- Card3 ---- */
 .Card3{
   position: relative;
   display:inline-block;
-  width: 28em;
+  /* width: 28em; */
   height: 400px;
   margin: 2em 1em;
   overflow: hidden;
   background: #000;
   box-shadow: rgba(6, 33, 63, 0.129412) 0px 1px 2px 0px;
   -moz-transition: 0.5s;-o-transition: 0.5s;-webkit-transition: 0.5s;transition: 0.5s;
+
 }
 
 .Card3 img{
@@ -99,15 +110,23 @@
 }
 
 @media screen and (max-width: 600px){
+  .mid-body{
+    width: 100%;
+     height: 100%;
+  }
   .grid-container-body{
     display: grid;
-    grid-template-columns: 1fr;
+    /* grid-template-columns: 1fr;
     padding: 10px;
     grid-column-start: 1;
     grid-column-end: 3;
     margin-top:3em;  
     margin-right:0.5em;
-    margin-left:0.5em;
+    margin-left:0.5em; */
+
+    grid-template-columns: repeat(auto-fill, minmax(186px, 1fr));
+    padding: 10px;
+    
   }
   .Card3{width: 100%;height: auto;margin: 1em 0em;}
   .Card3:hover img{top:30%;opacity: 0.5;}
