--- a/src/assets/styles/Events.css
+++ b/src/assets/styles/Events.css
@@ -12,7 +12,7 @@
     padding: 10px;
     grid-column-start: 1;
     grid-column-end: 4;
-    margin-top:1em;  
+    /* margin-top:1em;   */
 }
 .Card2-event-page{
     position: relative;
@@ -31,17 +31,39 @@
        margin-left:1.5em;
        margin-top:2em;
    }
+
+.Card2-event-page .textinevent-event-page .p{
+  color:#008294
+}
+
 .Card2-event-page .icon-event-page{
        display: flex;
        float: left;
-       margin-top:1.5em;
+       margin-top:1em;
+       color: #008294;
 }
 .Card2-event-page .txt-event-page{
        padding-left: 2.5em;
-       margin-top:1.5em;
+       margin-top:1em;
 }
+.rsvp-events{
+  text-decoration: none;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1em;
+  background-color: #008294;
+  color:#FFFFFF;
+  padding: 0.75em 1em;
+  border-radius: 5%;
+  float: right;
+  margin-right: 2rem;
+  margin-top: 1em;
+
+  
+ 
+}
+
     
-.Card2-event-page .overlay-event-page{
+/* .Card2-event-page .overlay-event-page{
     width: 100%;
     height: 100%;
     position: absolute;
@@ -50,16 +72,16 @@
     z-index: 10;
     color: #fff;
     -moz-transition: 0.5s;-o-transition: 0.5s;-webkit-transition: 0.5s;transition: 0.5s;
-  }
+  } */
   
-.Card2-event-page .overlay-event-page h2{
+/* .Card2-event-page .overlay-event-page h2{
     position: relative;
     margin: 2em 0px;
     top: -200px;
     -moz-transition: 0.5s;-o-transition: 0.5s;-webkit-transition: 0.5s;transition: 0.5s;
-  }
+  } */
   
-.Card2-event-page .overlay-event-page .link-event-page{
+.Card2-event-page  .link-event-page{
     position: relative;
     width: 60%;
     top: 200px;
@@ -72,7 +94,7 @@
   }
 .Card2-event-page .link-event-page:hover{background: #fff;color:#5c5c5c;}
   
-.Card2-event-page:hover .overlay-event-page{background: rgba(92, 92, 92, 0.8);}
+/* .Card2-event-page:hover .overlay-event-page{background: rgba(92, 92, 92, 0.8);} */
 .Card2-event-page:hover h2{top: 0px;}
 .Card2-event-page:hover .link-event-page{top: 0px;}
 
@@ -85,7 +107,7 @@
     padding: 10px;
     grid-column-start: 1;
     grid-column-end: 4;
-    margin-top:3em;  
+    /* margin-top:3em;   */
     margin-right:2em;
     margin-left:1em;
     
@@ -100,7 +122,7 @@
     box-shadow: 0px 25px 50px rgba(0, 0, 0, 0.5);
     overflow: hidden;
   }
-.Card2-event-page .overlay-event-page .link-event-page{
+.Card2-event-page .link-event-page{
    position: absolute;
    color:white;
    margin-top:4em;
