--- a/src/assets/styles/Rsvp.css
+++ b/src/assets/styles/Rsvp.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap');
 /* {
     margin: 0;
     padding: 0;
@@ -12,7 +14,7 @@
     width: 350px;
     height: 590px;
     margin: 0 auto;
-    box-shadow:0 5px 10px #2323;
+    box-shadow:0 0 15px #2323;
     margin-top: 50px;
     background:white;
     box-sizing: border-box;
@@ -127,6 +129,7 @@
     border-bottom:2px solid #bdc3c7;
     letter-spacing:2px;
     font-size:12px;
+    font-family: 'Roboto', sans-serif;
     margin-bottom:12px;
   }
   .options{
@@ -168,7 +171,7 @@
     font-size:24px;
     font-weight:bolder;
     letter-spacing:2px;
-    color:#6480ef;
+    color: #008294;
   }
   .button{
     width:120px;
@@ -176,9 +179,9 @@
     border-radius:1.2em;
     background:linear-gradient(
       to right,
-      #6480ef,
-      #7775e8,
-      #806ce8
+      #008294,
+      #007585,
+      #006876
     ); 
     color:white;
     font-weight:bolder;
