--- a/src/assets/styles/Rsvp.css
+++ b/src/assets/styles/Rsvp.css
@@ -14,18 +14,23 @@
   margin: 0 auto 100px;
   padding: 45px;
   text-align: center;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  /* box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24); */
+  box-shadow: 0 0 20px #cce6e9;
 }
 .rsvp-form input {
   font-family: "Roboto", sans-serif;
   outline: 0;
-  background: #f2f2f2;
+  /* background: #f2f2f2; */
+  background: #e5f2f4;
   width: 100%;
   border: 0;
   margin: 0 0 15px;
   padding: 15px;
   box-sizing: border-box;
   font-size: 14px;
+}
+.rsvp-form .quantity {
+  width:40%;
 }
 .rsvp-form button {
   font-family: "Roboto", sans-serif;
