--- a/src/assets/styles/Midsectevent.css
+++ b/src/assets/styles/Midsectevent.css
@@ -58,6 +58,21 @@
    .Card2 .textinevent .p{ 
      color:#008294;
    }
+  .Card2-event-page .textinevent .label{
+    color:white;  
+}
+.label .success{
+  background-color: #4CAF50;
+  padding:0.5em;
+  display:flex;
+  float:right;
+}
+.label .danger{
+  background-color:#ff9800;
+  padding:0.5em;
+  display:flex;
+  float:right;
+}
    .Card2 .icon{
        display: flex;
        float: left;
