fix: form color fixes

--- a/src/assets/styles/Login.css
+++ b/src/assets/styles/Login.css
@@ -13,12 +13,12 @@
   margin: 0 auto 100px;
   padding: 45px;
   text-align: center;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  box-shadow: 0 0 20px #cce6e9;
 }
 .form input {
   font-family: "Roboto", sans-serif;
   outline: 0;
-  background: #f2f2f2;
+  background: #e5f2f4;
   width: 100%;
   border: 0;
   margin: 0 0 15px;
