--- a/src/assets/styles/Events.css
+++ b/src/assets/styles/Events.css
@@ -57,9 +57,17 @@
        margin-top:1em;
        color: #008294;
 }
+.Card2-event-page .icon-event-page-time{
+  display: flex;
+  float: left;
+  margin-top:3.1em;
+  color: #008294;
+  margin-left: -1.5em;
+}
 .Card2-event-page .txt-event-page{
        padding-left: 2.5em;
        margin-top:1em;
+       
 }
 .rsvp-events{
   text-decoration: none;
